--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,10 @@
         <item name="android:textSize">@dimen/large_text_size</item>
         <item name="android:padding">@dimen/default_padding</item>
     </style>
+    <style name="MediumText" parent="TextAppearance.AppCompat.Medium">
+        <item name="android:textSize">@dimen/medium_text_size</item>
+        <item name="android:padding">@dimen/default_padding</item>
+    </style>
     <style name="ToolbarTitleText" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
         <item name="android:textSize">16sp</item>
     </style>
