--- a/app/src/main/res/layout/fragment_setting_import_export_home.xml
+++ b/app/src/main/res/layout/fragment_setting_import_export_home.xml
@@ -6,50 +6,70 @@
     android:orientation="vertical"
     tools:context=".settings.SettingsFragment">
     <TextView
-        android:id="@+id/account_type_text_view"
+        android:id="@+id/export_database_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/manage_account_types"
+        android:text="@string/export_database"
         style="@style/LargeText"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/separator_color"/>
     <TextView
-        android:id="@+id/categories_text_view"
+        android:id="@+id/import_database_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/manage_categories"
+        android:text="@string/import_database"
         style="@style/LargeText"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/separator_color"/>
     <TextView
-        android:id="@+id/currencies_text_view"
+        android:id="@+id/import_csv_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/manage_currencies"
+        android:text="@string/import_csv"
         style="@style/LargeText"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/separator_color"/>
     <TextView
-        android:id="@+id/import_export_home_text_view"
+        android:id="@+id/export_csv_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/import_export"
+        android:text="@string/export_csv"
         style="@style/LargeText"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/separator_color"/>
     <TextView
-        android:id="@+id/future_transactions_text_view"
+        android:id="@+id/import_qif_text_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/future_transactions"
+        android:text="@string/import_qif"
+        style="@style/LargeText"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/separator_color"/>
+    <TextView
+        android:id="@+id/export_qif_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/export_qif"
+        style="@style/LargeText"/>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/separator_color"/>
+    <TextView
+        android:id="@+id/autobackup_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/auto_backup"
         style="@style/LargeText"/>
     <View
         android:layout_width="match_parent"
