--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -16,6 +16,9 @@
             android:id="@+id/nav_reports"
             android:title="@string/reports"/>
         <item
+            android:id="@+id/nav_import_export_home"
+            android:title="@string/import_export"/>
+        <item
             android:id="@+id/nav_settings"
             android:title="@string/menu_settings"/>
     </group>
