--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -21,5 +21,8 @@
         <item
             android:id="@+id/nav_settings"
             android:title="@string/menu_settings"/>
+        <item
+            android:id="@+id/nav_create_saved_report"
+            android:title="@string/create_saved_report"/>
     </group>
 </menu>
