--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -319,4 +319,10 @@
             app:popUpTo="@id/nav_currency_home"
             app:popUpToInclusive="true" />
     </fragment>
+    <fragment
+        android:id="@+id/nav_create_saved_report"
+        android:name="com.adithya.aaafexpensemanager.transactionFilter.CreateTransactionFilterFragment"
+        android:label="Create Saved Report"
+        tools:layout="@layout/fragment_create_transacton_filter">
+    </fragment>
 </navigation>
