--- a/app/src/main/res/layout/fragment_setting_upload_csv.xml
+++ b/app/src/main/res/layout/fragment_setting_upload_csv.xml
@@ -15,14 +15,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="No file selected" />
+        android:text="@string/no_file_selected" />
 
     <Button
         android:id="@+id/uploadButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Upload and Process" />
+        android:text="@string/upload_and_process" />
 
     <TextView
         android:id="@+id/csvDataDisplayTextView"
