--- a/app/src/main/res/menu/transaction_multiselect_menu.xml
+++ b/app/src/main/res/menu/transaction_multiselect_menu.xml
@@ -1,10 +1,12 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
+<menu xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_copy_txn"
         android:icon="@drawable/baseline_content_copy_24"
         android:title="@string/copy_txn"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+        tools:ignore="AlwaysShowAction" />
     <item
         android:id="@+id/action_delete"
         android:icon="@android:drawable/ic_menu_delete"
