--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,7 +22,7 @@
             android:id="@+id/nav_settings"
             android:title="@string/menu_settings" />
         <item
-            android:id="@+id/nav_create_saved_report"
-            android:title="@string/create_saved_report" />
+            android:id="@+id/nav_transaction_filter_list"
+            android:title="@string/saved_reports" />
     </group>
 </menu>
