--- a/app/src/main/res/layout/fragment_setting_import_qif.xml
+++ b/app/src/main/res/layout/fragment_setting_import_qif.xml
@@ -1,5 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,22 +9,21 @@
         android:id="@+id/selectFileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Database Zip File"
-        tools:ignore="HardcodedText" />
+        android:text="Select QIF File" />
 
     <TextView
         android:id="@+id/fileSelectedTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/no_file_selected" />
+        android:text="No file selected" />
 
     <Button
         android:id="@+id/importButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="@string/import_database" />
+        android:text="Import QIF" />
 
     <TextView
         android:id="@+id/importStatusTextView"
