--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -119,24 +119,34 @@
         android:label="Import/Export"
         tools:layout="@layout/fragment_setting_import_export_home">
         <action
-            android:id="@+id/action_settingsFragment_to_exportDatabaseFragment"
+            android:id="@+id/action_importExportHomeFragment_to_exportDatabaseFragment"
             app:destination="@id/nav_export_database"
             app:popUpTo="@id/nav_export_database"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_settingsFragment_to_importDatabaseFragment"
+            android:id="@+id/action_importExportHomeFragment_to_importDatabaseFragment"
             app:destination="@id/nav_import_database"
             app:popUpTo="@id/nav_import_database"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_settingsFragment_to_importCSVFragment"
+            android:id="@+id/action_importExportHomeFragment_to_importCSVFragment"
             app:destination="@id/nav_import_csv"
             app:popUpTo="@id/nav_import_csv"
             app:popUpToInclusive="true" />
         <action
-            android:id="@+id/action_settingsFragment_to_autoBackupFragment"
+            android:id="@+id/action_importExportHomeFragment_to_autoBackupFragment"
             app:destination="@id/nav_autobackup_dir_sel"
             app:popUpTo="@id/nav_autobackup_dir_sel"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_importExportHomeFragment_to_importQIFFragment"
+            app:destination="@id/nav_import_QIF"
+            app:popUpTo="@id/nav_import_QIF"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_importExportHomeFragment_to_exportQIFFragment"
+            app:destination="@id/nav_export_QIF"
+            app:popUpTo="@id/nav_export_QIF"
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
@@ -347,5 +357,17 @@
             app:destination="@id/nav_category_summary"
             app:popUpTo="@id/nav_category_summary"
             app:popUpToInclusive="true" />
+    </fragment>
+    <fragment
+        android:id="@+id/nav_import_QIF"
+        android:name="com.adithya.aaafexpensemanager.settings.importExportQIF.ImportQIFFragment"
+        android:label="Import QIF"
+        tools:layout="@layout/fragment_setting_import_qif">
+    </fragment>
+    <fragment
+        android:id="@+id/nav_export_QIF"
+        android:name="com.adithya.aaafexpensemanager.settings.importExportQIF.ExportQIFFragment"
+        android:label="Export QIF"
+        tools:layout="@layout/fragment_setting_export_qif">
     </fragment>
 </navigation>
