--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -139,6 +139,16 @@
             app:popUpTo="@id/nav_export_csv"
             app:popUpToInclusive="true" />
         <action
+            android:id="@+id/action_importExportHomeFragment_to_exportSchedulesCSVFragment"
+            app:destination="@id/nav_export_schedules_csv"
+            app:popUpTo="@id/nav_export_schedules_csv"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_importExportHomeFragment_to_importSchedulesCSVFragment"
+            app:destination="@id/nav_import_schedules_csv"
+            app:popUpTo="@id/nav_import_schedules_csv"
+            app:popUpToInclusive="true" />
+        <action
             android:id="@+id/action_importExportHomeFragment_to_autoBackupFragment"
             app:destination="@id/nav_autobackup_dir_sel"
             app:popUpTo="@id/nav_autobackup_dir_sel"
@@ -282,6 +292,18 @@
         android:name="com.adithya.aaafexpensemanager.settings.importExportCSV.ExportCSVFragment"
         android:label="Export CSV"
         tools:layout="@layout/fragment_setting_export_csv">
+    </fragment>
+    <fragment
+        android:id="@+id/nav_export_schedules_csv"
+        android:name="com.adithya.aaafexpensemanager.settings.importExportSchedules.ExportCSVScheduleFragment"
+        android:label="Export Schedules CSV"
+        tools:layout="@layout/fragment_setting_export_csv">
+    </fragment>
+    <fragment
+        android:id="@+id/nav_import_schedules_csv"
+        android:name="com.adithya.aaafexpensemanager.settings.importExportSchedules.ImportCSVScheduleFragment"
+        android:label="Import Schedules CSV"
+        tools:layout="@layout/fragment_setting_upload_csv">
     </fragment>
     <fragment
         android:id="@+id/nav_autobackup_dir_sel"
