--- a/app/src/main/res/layout/fragment_setting_upload_csv.xml
+++ b/app/src/main/res/layout/fragment_setting_upload_csv.xml
@@ -32,5 +32,10 @@
         android:maxLines="10"
         android:scrollbars="vertical"
         android:text="" />
-
+    <ProgressBar
+        android:id="@+id/progress_circular"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:visibility="gone" />
 </LinearLayout>
