--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -24,5 +24,8 @@
         <item
             android:id="@+id/nav_transaction_filter_list"
             android:title="@string/saved_reports" />
+        <item
+            android:id="@+id/nav_test_fragment"
+            android:title="@string/test_fragment" />
     </group>
 </menu>
