--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -403,4 +403,10 @@
         android:label="Export QIF"
         tools:layout="@layout/fragment_setting_export_qif">
     </fragment>
+    <fragment
+        android:id="@+id/nav_test_fragment"
+        android:name="com.adithya.aaafexpensemanager.util.TestFragment"
+        android:label="Test Fragment"
+        tools:layout="@layout/fragment_test">
+    </fragment>
 </navigation>
