--- a/app/src/main/res/layout/fragment_setting_import_qif.xml
+++ b/app/src/main/res/layout/fragment_setting_import_qif.xml
@@ -9,21 +9,21 @@
         android:id="@+id/selectFileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select QIF File" />
+        android:text="@string/select_qif_file" />
 
     <TextView
         android:id="@+id/fileSelectedTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="No file selected" />
+        android:text="@string/no_file_selected" />
 
     <Button
         android:id="@+id/importButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:text="Import QIF" />
+        android:text="@string/import_qif" />
 
     <TextView
         android:id="@+id/importStatusTextView"
