--- a/app/src/main/res/layout/fragment_setting_upload_csv.xml
+++ b/app/src/main/res/layout/fragment_setting_upload_csv.xml
@@ -8,7 +8,7 @@
         android:id="@+id/selectFileButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select CSV File" />
+        android:text="@string/select_csv_file" />
 
     <TextView
         android:id="@+id/fileSelectedTextView"
