--- a/app/src/main/res/menu/transaction_multiselect_menu.xml
+++ b/app/src/main/res/menu/transaction_multiselect_menu.xml
@@ -1,6 +1,6 @@
-<menu xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <item
         android:id="@+id/action_copy_txn"
         android:icon="@drawable/baseline_content_copy_24"
