--- a/app/src/main/res/menu/list_account_menu.xml
+++ b/app/src/main/res/menu/list_account_menu.xml
@@ -2,6 +2,11 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/createNewAccountMenuItem"
+        android:orderInCategory="100"
+        android:title="@string/create_new_account"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/actionShowHideClosedAccountsMenuItem"
         android:orderInCategory="100"
         android:title="@string/show_hide_closed_accounts"
