--- a/app/src/main/res/layout/fragment_settings_home.xml
+++ b/app/src/main/res/layout/fragment_settings_home.xml
@@ -65,4 +65,15 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="@color/separator_color" />
+    <TextView
+        android:id="@+id/about_app"
+        style="@style/LargeText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/about" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/separator_color" />
 </LinearLayout>
