--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -96,6 +96,11 @@
             app:destination="@id/nav_import_export_home"
             app:popUpTo="@id/nav_import_export_home"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_settingsFragment_to_aboutAppFragment"
+            app:destination="@id/nav_about_app"
+            app:popUpTo="@id/nav_about_app"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/nav_account_type"
@@ -403,4 +408,8 @@
         android:name="com.adithya.aaafexpensemanager.util.TestFragment"
         android:label="Test Fragment"
         tools:layout="@layout/fragment_test" />
+    <fragment
+        android:id="@+id/nav_about_app"
+        android:name="com.adithya.aaafexpensemanager.settings.aboutApp.AboutAppFragment"
+        android:label="About App"/>
 </navigation>
