--- a/app/src/main/res/layout/reuse_dialog_edit_text.xml
+++ b/app/src/main/res/layout/reuse_dialog_edit_text.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -15,6 +16,7 @@
             android:id="@+id/materialEditText"
             style="@style/LargeText"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            tools:ignore="VisualLintTextFieldSize,SpeakableTextPresentCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 </LinearLayout>
