--- a/app/src/main/res/layout/fragment_create_recurring.xml
+++ b/app/src/main/res/layout/fragment_create_recurring.xml
@@ -139,14 +139,14 @@
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:hint="@string/amount">
-
-                            <com.google.android.material.textfield.TextInputEditText
+                            <com.adithya.aaafexpensemanager.reusableComponents.calculatorEditText.CalculatorEditText
                                 android:id="@+id/amountEditText"
                                 style="@style/LargeText"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:inputType="numberDecimal"
-                                tools:ignore="Autofill,TextContrastCheck,VisualLintTextFieldSize" />
+                                app:decimalPlaces="2"
+                                app:allowNegativePlaces="false"
+                                tools:ignore="TextContrastCheck,VisualLintTextFieldSize"/>
                         </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
 
