- Change EditText to CalculatorEditText in create account fragment - change allowNegativePlaces to allowNegativeValues

--- a/app/src/main/res/layout/fragment_create_recurring.xml
+++ b/app/src/main/res/layout/fragment_create_recurring.xml
@@ -145,7 +145,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 app:decimalPlaces="2"
-                                app:allowNegativePlaces="false"
+                                app:allowNegativeValues="false"
                                 tools:ignore="TextContrastCheck,VisualLintTextFieldSize"/>
                         </com.google.android.material.textfield.TextInputLayout>
                     </LinearLayout>
