--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -50,18 +50,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/update_balance" />
+
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/account_balance">
+
                 <com.adithya.aaafexpensemanager.reusableComponents.calculatorEditText.CalculatorEditText
                     android:id="@+id/accountBalanceEditText"
                     style="@style/LargeText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    app:decimalPlaces="2"
-                    app:allowNegativeValues="true" />
+                    app:allowNegativeValues="true"
+                    app:decimalPlaces="2" />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
