--- a/app/src/main/res/layout/reuse_dialog_calculator_edittext.xml
+++ b/app/src/main/res/layout/reuse_dialog_calculator_edittext.xml
@@ -22,37 +22,129 @@
         android:stretchColumns="*">
 
         <TableRow android:layout_weight="1">
-            <Button android:id="@+id/button7" android:text="@string/_7" android:layout_weight="1" android:layout_margin="2dp" />
-            <Button android:id="@+id/button8" android:text="@string/_8" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/button9" android:text="@string/_9" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/buttonDivide" android:text="@string/_divide" android:layout_weight="1" android:layout_margin="2dp"/>
+
+            <Button
+                android:id="@+id/button7"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_7" />
+
+            <Button
+                android:id="@+id/button8"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_8" />
+
+            <Button
+                android:id="@+id/button9"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_9" />
+
+            <Button
+                android:id="@+id/buttonDivide"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_divide" />
         </TableRow>
+
         <TableRow android:layout_weight="1">
-            <Button android:id="@+id/button4" android:text="@string/_4" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/button5" android:text="@string/_5" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/button6" android:text="@string/_6" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/buttonMultiply" android:text="@string/_multiply" android:layout_weight="1" android:layout_margin="2dp"/>
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_4" />
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_5" />
+
+            <Button
+                android:id="@+id/button6"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_6" />
+
+            <Button
+                android:id="@+id/buttonMultiply"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_multiply" />
         </TableRow>
+
         <TableRow android:layout_weight="1">
-            <Button android:id="@+id/button1" android:text="@string/_1" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/button2" android:text="@string/_2" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/button3" android:text="@string/_3" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/buttonSubtract" android:text="@string/_subtract" android:layout_weight="1" android:layout_margin="2dp"/>
+
+            <Button
+                android:id="@+id/button1"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_1" />
+
+            <Button
+                android:id="@+id/button2"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_2" />
+
+            <Button
+                android:id="@+id/button3"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_3" />
+
+            <Button
+                android:id="@+id/buttonSubtract"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_subtract" />
         </TableRow>
+
         <TableRow android:layout_weight="1">
+
             <Button
                 android:id="@+id/button0"
-                android:text="@string/_0"
-                tools:ignore="DuplicateSpeakableTextCheck"
+                android:layout_margin="2dp"
                 android:layout_weight="1"
-                android:layout_margin="2dp"/>
-            <Button android:id="@+id/buttonDecimal" android:text="@string/_dot" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/buttonEquals" android:text="@string/_equals" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/buttonAdd" android:text="@string/_add" android:layout_weight="1" android:layout_margin="2dp"/>
+                android:text="@string/_0"
+                tools:ignore="DuplicateSpeakableTextCheck" />
+
+            <Button
+                android:id="@+id/buttonDecimal"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_dot" />
+
+            <Button
+                android:id="@+id/buttonEquals"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_equals" />
+
+            <Button
+                android:id="@+id/buttonAdd"
+                android:layout_margin="2dp"
+                android:layout_weight="1"
+                android:text="@string/_add" />
         </TableRow>
+
         <TableRow android:layout_weight="1">
-            <Button android:id="@+id/buttonClear" android:text="@string/_clear" android:layout_span="3" android:layout_weight="1" android:layout_margin="2dp"/>
-            <Button android:id="@+id/buttonPlusMinus" android:text="@string/_plus_minus" android:layout_span="1" android:layout_weight="1" android:layout_margin="2dp"/>
+
+            <Button
+                android:id="@+id/buttonClear"
+                android:layout_margin="2dp"
+                android:layout_span="3"
+                android:layout_weight="1"
+                android:text="@string/_clear" />
+
+            <Button
+                android:id="@+id/buttonPlusMinus"
+                android:layout_margin="2dp"
+                android:layout_span="1"
+                android:layout_weight="1"
+                android:text="@string/_plus_minus" />
         </TableRow>
 
     </TableLayout>
